[gd_scene load_steps=3 format=3 uid="uid://d1felt8w1cl2s"]

[ext_resource type="Script" path="res://Scripts/accelerator.gd" id="1_lt4qc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ht6lq"]
size = Vector3(3.38818, 1, 7.66852)

[node name="accelerator" type="Area3D"]
script = ExtResource("1_lt4qc")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.999985, 0, 0, 0, 1, 0, 0, 0, 0.999985, 0, 0, 0)
shape = SubResource("BoxShape3D_ht6lq")

[node name="Marker3D" type="Marker3D" parent="."]

[node name="Marker3D2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
